--- a/e-Backpack/.classpath
+++ b/e-Backpack/.classpath
@@ -13,5 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="/usr/people/classes/Java/ojdbc7.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
